data/src/main/java/com/example/data/network/error/DoesntMatchException.kt
package com.example.data.network.error

class DoesntMatchException: RuntimeException()